[package]
name = "docker-hub-rss"
version = "0.1.0"
edition = "2018"
description = "RSS feed for Docker Hub images"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/docker-hub-rss"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
warp = "0.3"
serde_json = "1"
color-eyre = "0.5"
dotenv = "0.15"
rss = { version = "1", features = ["builders"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true